# lob-engine

./: .gitattributes  .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
backtest/: README.md  backtest.py  market_maker.py
dashboard/: README.md  build_dashboard.py  capture_cover.py  dashboard.html  live.html  preview.py
data/: README.md  capture_feed.py  depth_sample.csv  events_sample.csv  features_ml_sample.csv  features_sample.csv  sample_head.csv
engine/: CMakeLists.txt
engine/bench/: bench.cpp
engine/include/: fast_order_book.hpp  order_book.hpp  parse.hpp
engine/src/: fast_order_book.cpp  main.cpp  order_book.cpp
engine/tests/: test_fast_order_book.cpp  test_order_book.cpp
ml/: README.md  train.py
tests/: _helpers.py  requirements.txt  test_backtest.py  test_capture_adapters.py  test_market_maker.py  test_ml.py
